version/0.17/_sources/API/visualization/_autosummary/ansys.aedt.core.visualization.report.field.Fields.rst.txt
Fields
======

.. currentmodule:: ansys.aedt.core.visualization.report.field

.. autoclass:: Fields

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Fields.add_cartesian_x_marker
      
      
      Fields.add_cartesian_y_marker
      
      
      Fields.add_limit_line_from_equation
      
      
      Fields.add_limit_line_from_points
      
      
      Fields.add_note
      
      
      Fields.add_trace_characteristics
      
      
      Fields.add_trace_to_report
      
      
      Fields.apply_report_template
      
      
      Fields.create
      
      
      Fields.delete
      
      
      Fields.delete_traces
      
      
      Fields.edit_general_settings
      
      
      Fields.edit_grid
      
      
      Fields.edit_header
      
      
      Fields.edit_legend
      
      
      Fields.edit_x_axis
      
      
      Fields.edit_x_axis_scaling
      
      
      Fields.edit_y_axis
      
      
      Fields.edit_y_axis_scaling
      
      
      Fields.export_config
      
      
      Fields.export_table_to_file
      
      
      Fields.get_solution_data
      
      
      Fields.hide_legend
      
      
      Fields.import_traces
      
      
      Fields.jsonalize_tree
      
      
      Fields.suppress_all
      
      
      Fields.unsuppress_all
      
      
      Fields.update_expressions_with_defaults
      
      
      Fields.update_property
      
      
      Fields.update_trace_in_report
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Fields.children
      Fields.command
      Fields.differential_pairs
      Fields.domain
      Fields.expressions
      Fields.limit_lines
      Fields.matrix
      Fields.notes
      Fields.plot_name
      Fields.point_number
      Fields.polyline
      Fields.primary_sweep
      Fields.primary_sweep_range
      Fields.properties
      Fields.reduced_matrix
      Fields.report_category
      Fields.report_type
      Fields.secondary_sweep
      Fields.secondary_sweep_range
      Fields.traces
      Fields.use_pulse_in_tdr
      Fields.variations
   
   